crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__record__tests__single.snap
---
source: crates/alder-parse/src/pattern/record.rs
description: "Code:\n\n{ x }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Record(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: "x",
            },
        ],
    ),
}
